--- a/web/assets/app/sass/components/_landing.sass
+++ b/web/assets/app/sass/components/_landing.sass
@@ -1,5 +1,6 @@
 .section__landing
-  padding: 240px 150px 0 80px
+  padding: 240px 150px 50px 80px
+  position: relative
 
 .landing__img
 
